<resources>

    <string name="app_name">Storizon</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>

    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>

    <string name="guest">Guest</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="login_title">Welcome Back!</string>
    <string name="login_subtitle">Sign in to continue your journey</string>
    <string name="register_title">Join Us Today!</string>
    <string name="register_subtitle">Create an account to start your adventure</string>

    <string name="hint_full_name_edit_text">Full Name</string>
    <string name="hint_email_edit_text">Email</string>
    <string name="hint_password_edit_text">Password</string>
    <string name="hint_confirm_password_edit_text">Confirm Password</string>
    <string name="hint_story_edit_text">Write your story…</string>

    <string name="content_description_back_button">Go back to the previous screen</string>
    <string name="content_description_image_upload_preview">Preview of the selected image</string>
    <string name="content_description_flash_light">Turn on flashlight</string>
    <string name="content_description_flip_camera">Flip camera</string>
    <string name="content_description_story_image">Image preview of selected story</string>
    <string name="content_description_app_logo">Image of app logo</string>
    <string name="content_description_navigation_icon">Open navigation menu</string>
    <string name="content_description_add_new_story">add new story</string>
    <string name="content_description_notifications_icon">Icon of notifications</string>
    <string name="content_description_dark_mode_icon">Icon of dark mode</string>
    <string name="content_description_language_icon">Language icon</string>
    <string name="content_description_language_button">Icon of language button</string>
    <string name="content_description_logout_icon">Icon of logout</string>
    <string name="content_description_profile_image">User profile image</string>
    <string name="content_description_capture_image">Capture image</string>

    <string name="error_empty_name">Name cannot be empty.</string>
    <string name="error_empty_email">Email cannot be empty.</string>
    <string name="error_empty_password">Password cannot be empty.</string>
    <string name="error_empty_confirm_password">Confirm Password cannot be empty.</string>
    <string name="error_invalid_email">Invalid email format.</string>
    <string name="error_short_password">Password must be at least 8 characters.</string>
    <string name="error_password_not_match">Confirm password must be the same as password.</string>
    <string name="error_fill_all_fields">Please fill out all fields with correct data before submitting.</string>
    <string name="error_description_cannot_be_empty">Description cannot be empty</string>

    <string name="toast_permission_granted">Permission granted</string>
    <string name="toast_permission_denied">Permission denied</string>
    <string name="toast_account_created_successfully">Account created successfully!</string>
    <string name="toast_failed_to_load_stories">Failed to load stories</string>
    <string name="toast_nav_about">MD-33|RezkyAditiaFauzan</string>
    <string name="toast_please_select_an_image">Please select an image.</string>
    <string name="toast_please_add_a_description">Please add a description.</string>

    <string name="failed_to_display_camera">Failed to display camera</string>
    <string name="failed_to_capture_image">Failed to capture image</string>
    <string name="no_email_provided">No email provided</string>
    <string name="select_language">Select Language</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>

    <string name="todo">TODO</string>
    <string name="appwidget_text">STORY BANNER</string>
    <string name="empty_text">NO DATA</string>
    <string name="include_location">Include Location?</string>
    <string name="location_permission_is_required_to_provide_better_service">Location permission is required to provide better service.</string>
    <string name="unable_to_fetch_location">Unable to fetch location.</string>
    <string name="location_fetch_failed">Location fetch failed.</string>
    <string name="location_permission_not_granted">Location permission not granted.</string>
    <string name="retry">Retry</string>
    <string name="hello">Hello, %1$s</string>
    <string name="no_location">No location</string>
    <string name="enable_location">Enable location</string>
    <string name="hello_guest">Hello, Guest</string>
    <string name="welcome_to_storizon">Welcome to Storizon</string>
    <string name="image">image</string>
    <string name="words_written">Words Written</string>
    <string name="daily_streak">Daily Streak</string>
    <string name="discover_stories">Discover Stories</string>
    <string name="explore_stories_from_different_locations_on_an_interactive_map">Explore stories from different locations on an interactive map</string>
    <string name="view_map">View Map</string>
    <string name="latest_stories">Latest Stories</string>
    <string name="view_all">view all</string>
    <string name="stories">Stories</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already Have an Account?</string>

</resources>