...
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:includeFontPadding="false"
                        android:text="@string/hello_guest"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toStartOf="@id/settings_button"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/wc2"
                        android:layout_width="wrap_content"
...
